Copyedits for 18 Dec + fixing filename

--- a/newsletter/2022-12-18.md
+++ b/newsletter/2022-12-18.md
@@ -1,10 +1,10 @@
 # #Web3Weekly: Dec. 11-17, 2022
 
-**Enough villains.** Let's take a break to talk about the crypto world's good guys for just a moment.
+**Enough villains.** Let's take a break to talk about the crypto world's good guys for a moment.
 
 The Giving Block, a fundraising platform for nonprofits, is [matching donations](https://thegivingblock.com/donate/) of tokens or stock made on its site through Dec. 31. If you're able to donate, please do [take a look](https://thegivingblock.com/donate/) as you finish up your holiday shopping. There are plenty of great orgs to choose from, and it might even help you get on Santa's "nice" list next year. 🎅
 
-That's a good note to end the year with, I think. Since next Sunday is Christmas, I won't be publishing this newsletter. I wish you all a very happy holiday and safe travels, if you're going to be on the road.
+That's a good note to end the year on, I think. Since next Sunday is Christmas, I won't be publishing this newsletter. I wish you all a very happy holiday and safe travels, if you're going to be on the road.
 
 We'll pick things up in the New Year, of course. In the meantime, here's one last batch of headlines for 2022:  
 
