Final edit for 1 Jan 2023

--- a/newsletter/2023-01-01.md
+++ b/newsletter/2023-01-01.md
@@ -10,7 +10,7 @@ I'm guardedly optimistic for 2023. Looking ahead, I really like this quote from 
 
 *“Read the room and assess the damage,” says Sandra Ro, CEO of the Global Blockchain Business Council... “Regroup with humility, rebuild with integrity, regain trust, rise again.”*
 
-In the spirit of assessing the damage, here are 2022's year-end returns for major market benchmarks. I include here crypto and the performance of some major conventional assets as well:
+In the spirit of assessing the damage, here are 2022's year-end returns for major market benchmarks. I include here crypto and some major conventional assets as well:
 
 - **ETH:** -67%
 - **BTC:** -64%
@@ -27,7 +27,7 @@ Hence a whole heap of selling.
 
 For crypto investors, there are some glimmers of hope in 2023, though. Consider:
 
-- **The tightening cycle may finally end.** The U.S. Federal Reserve recently [slowed the pace](https://www.msn.com/en-us/money/markets/federal-reserve-slows-interest-rate-hikes-with-05-increase/ar-AA15huuV) of its rate hikes slightly and may have to cease or even reverse course altogether at some point this year to [stave off recession](https://www.yahoo.com/entertainment/billionaire-investor-jeff-gundlach-says-115028996.html).
+- **The tightening cycle may finally end.** The U.S. Federal Reserve recently [slowed the pace](https://www.msn.com/en-us/money/markets/federal-reserve-slows-interest-rate-hikes-with-05-increase/ar-AA15huuV) of its rate hikes slightly and may have to cease or even reverse course altogether at some point this year to [stave off recession](https://www.yahoo.com/entertainment/billionaire-investor-jeff-gundlach-says-115028996.html). The Fed famously has a [dual mandate](https://www.investopedia.com/articles/investing/100715/breaking-down-federal-reserves-dual-mandate.asp) in its charter -- to promote both price stability and full employment in the U.S. economy. It may have to shift focus to the latter half of that equation soon.  
 
 - **Outside the U.S., the impetus to "de-dollarize" should be strong as ever.** The greenback's strength in 2022 due to Fed tightening wreaked a lot of [economic havoc overseas](https://www.forbes.com/sites/simonconstable/2022/10/27/how-a-strong-dollar-hurts-europe--emerging-markets/) as it disrupted flows of capital and goods priced in dollars around the world. If that whets some participants' appetite for alternatives to pricing everything in dollars, bitcoin in particular could benefit in 2023. To be sure, BTC has a long way still to go to become the standard for global trade, as its most ardent fans hope. But it also doesn't have to get all the way to that finish line to enjoy a big rally relative to its current price.
 
