Copy for 8 Jan 2023

--- a/newsletter/2023-01-08.md
+++ b/newsletter/2023-01-08.md
@@ -1,49 +1,41 @@
-# TKTKTK
+# Robots and humans: A new era in journalism?
 ## #Web3Weekly: Jan. 1-7, 2023
 
 ![Different kinds of robot journalists in a newsroom in the style of Rembrandt](https://w3w.news/img/illos/robot-journos-2-cropped.jpg)
 *"Robot Journos 2" by Peter A. McKay*
 
-**I'm breaking in two new members** of the newsletter team this week -- an editorial assistant and an illustrator.
-
-They're both artificially intelligent bots.
+**I'm breaking in two new members** of the newsletter's editorial team this week. They're both artificially intelligent bots.
 
 To be more specific, they are early-stage products from the startup
 [OpenAI](https://openai.com/). The company recently did initial public releases of an image generator, cheekily dubbed [DALL-E](https://openai.com/dall-e-2/), and a bot called [ChatGPT](https://chat.openai.com/) that gives text-based responses to user queries.  
 
-I've been hearing a lot about these AIs lately, especially ChatGPT, so I decided to sign up and try integrating them into my workflow for the newsletter this week.
+I've been hearing a lot about these AIs lately, especially ChatGPT, so I decided to sign up and try integrating them into my workflow for the newsletter this week. I essentially used them as an illustrator and editorial assistant for this edition, and will continue to do so for the time being.
 
-To summarize, I would say my results were mixed. ChatGPT and DALL-E both clearly have limitations right now, but also a lot of promise as they inevitably evolve. The nightmare scenario that Harvard prof Heidi Legg tktktk fretted about TKTKTKTK on Twitter
+To summarize, I would say my results were mixed with this initial attempt. ChatGPT and DALL-E both clearly have limitations right now, but also a lot of promise as they inevitably evolve.
 
 To put it in familiar sci-fi terms, these products right now are nowhere close to being terminators (which we of course wouldn't want anyway) or even Data from Star Trek, friendly and fully autonomous. They're more like R2-D2, handy assistants who can do some specific tasks pretty well if you direct them properly.
 
+I'd say the [nightmare scenario](https://twitter.com/heidilegg/status/1609607413149073414) that journalist and Harvard media researcher Heidi Legg laid out on Twitter recently -- essentially, a dystopia in which the machines tell us what to think about the news -- isn't exactly nigh upon us. But it is definitely a longer-term concern worth discussing.
 
+Tasks I used the bots for this time:
 
+- **Drafting.** ChatGPT wrote early drafts of some of the bulleted news items further down in the newsletter. But I had to find the stories myself and feed it the full text of the stories to summarize, as ChatGPT can't access the web itself right now. (It only has a fixed dataset it's been trained on.) Then I had to edit and fact check the drafts it spit out, much like I might have to do with a rookie reporter might. In fairness, though, it wrote much faster, spitting out drafts in less than a minute each for me to review.
 
-<!--
+- **Headline writing.** Once I drafted the body copy of this update, I fed it into ChatGPT and had it draft several possible headlines. Then I picked what I thought was the best one. You can see it, unedited, at the top of this post or in the email subject line if your an email subscriber.
 
-- Riff on DALL-E 2 and Chat GPT  
+- **Illustration.** This took a *lot* of massaging and iteration with DALL-E, probably as much because of my own limitations as those of the AI. (More on this in a moment.) But I did eventually get it to spit out an image I really liked by requesting an image of "different kinds of robot journalists in a newsroom in the style of Rembrandt." From there, DALL-E produced a nifty square-shaped image that I iterated upon using DALL-E's editing features and some additional queries to the AI.
 
-- Heidi Legg's concerns here are way overblown: https://twitter.com/heidilegg/status/1609607413149073414
+- **Tech support.** When I was initially struggling with DALL-E, I of course turned to... wait for it... ChatGPT for some advice about its cousin. Frankly, the information it gave me wasn't at all useful and I instead fared much better by doing an old-school web search for articles by human users of DALL-E. It was their accounts, written from old-fashioned trial and error, that really helped me generate the final illustration you see with this edition of the newsletter.  
 
-- https://www.youtube.com/watch?v=NiJeB2NJy1A
+OK. On to the week's other major headlines about decentralization:
 
--->
+- **FTX founder Sam Bankman-Fried pleaded not guilty** to criminal charges that he cheated investors in his now-bankrupt FTX cryptocurrency exchange and caused billions of dollars in losses. He [faces eight criminal counts](https://www.reuters.com/legal/bankman-fried-set-enter-not-guilty-plea-ftx-fraud-case-2023-01-03/), including wire fraud and money laundering conspiracy. He could face up to 115 years in prison if convicted in a trial set for Oct. 2. U.S. prosecutors have posted a [webpage](https://www.justice.gov/usao-sdny/united-states-v-samuel-bankman-fried-aka-sbf-22-cr-673-lak) asking FTX customers or other creditors to contact them as potential witnesses if they believe they were defrauded.
 
-The latest headlines:
-
-- Sam Bankman-Fried has pleaded not guilty to criminal charges that he cheated investors in his now-bankrupt FTX cryptocurrency exchange and caused billions of dollars in losses. Bankman-Fried faces eight criminal counts, including wire fraud and money laundering conspiracy. He could face up to 115 years in prison if convicted. The trial is set for October 2. (https://www.reuters.com/legal/bankman-fried-set-enter-not-guilty-plea-ftx-fraud-case-2023-01-03/)
-
-- **FTX updates:**  FTX announced a [new agreement](https://www.prnewswire.com/news-releases/ftx-debtors-and-ftx-dm-bahamas-announce-cooperation-agreement-301715690.html) between its corporate entities in the U.S. and Bahamas to cooperate in resolving civil bankruptcy proceedings in both jurisdictions. Meanwhile, exchange founder Sam Bankman-Fried is fighting to retain personal control of [$450 million in Robinhood shares](https://www.coindesk.com/business/2023/01/06/sam-bankman-fried-seeks-to-keep-grasp-on-450m-in-robinhood-shares/), arguing they were bought using money borrowed from FTX's trading arm, Alameda Research. Separately, Alameda joined state and federal regulators in [objecting](https://www.coindesk.com/policy/2023/01/05/bankman-frieds-alameda-joins-chorus-objecting-to-binance-voyager-buy/) to Binance.US's proposed purchase of bankrupt crypto lender Voyager Digital for $1 billion.
-
-- **U.S. prosecutors** have posted a [webpage](https://www.justice.gov/usao-sdny/united-states-v-samuel-bankman-fried-aka-sbf-22-cr-673-lak) asking FTX customers or other creditors to contact them if you believe you were defrauded by founder Sam Bankman-Fried. They're looking for witnesses to build their case against Bankman-Fried.
+- **In its civil bankruptcy proceedings,** FTX announced a [new agreement](https://www.prnewswire.com/news-releases/ftx-debtors-and-ftx-dm-bahamas-announce-cooperation-agreement-301715690.html) between its corporate entities in the U.S. and Bahamas to cooperate in resolving creditors' claims in both jurisdictions. Meanwhile, exchange Bankman-Fried is fighting to retain personal control of [$450 million in Robinhood shares](https://www.coindesk.com/business/2023/01/06/sam-bankman-fried-seeks-to-keep-grasp-on-450m-in-robinhood-shares/). And FTX's trading arm, Alameda Research, joined U.S. regulators in [objecting](https://www.coindesk.com/policy/2023/01/05/bankman-frieds-alameda-joins-chorus-objecting-to-binance-voyager-buy/) to Binance.US's proposed purchase of bankrupt crypto lender Voyager Digital for $1 billion.
 
 - **Decrypt published** a handy [explainer](https://decrypt.co/resources/what-are-proof-reserves-why-do-they-matter) about proof of reserves on crypto exchanges and why they matter.  
 
-- Celsius Network has won ownership of over $4.2bn worth of customer funds after a prolonged legal battle. A US judge ruled that the funds, deposited into Celsius' interest-bearing accounts, are the property of the firm and can be used as it sees fit. The ruling comes after Celsius filed for bankruptcy in July and has been involved in various legal battles to secure its assets. The firm announced in December that it would sell $18m worth of stablecoins to fund its restructuring plan. (https://247wallst.com/investing/2023/01/05/celsius-wins-ownership-of-4-2b-worth-of-customers-funds/)
-
-- New York Attorney General Letitia James has filed a lawsuit against Alex Mashinsky, a former CEO of cryptocurrency lending platform Celsius Network and its related entities, alleging that he defrauded hundreds of thousands of investors of billions of dollars worth of cryptocurrency. The lawsuit seeks to ban Mashinsky from doing business in New York, require him to pay damages, restitution and disgorgement, and bar him from serving as a director or officer of any company doing business in New York. Mashinsky repeatedly made false and misleading statements about Celsius's safety to encourage investors to deposit billions of dollars in digital assets onto the platform, according to the lawsuit. (https://ag.ny.gov/press-release/2023/attorney-general-james-sues-former-ceo-celsius-cryptocurrency-platform-defrauding)
-
+- **Celsius Network has won ownership** of more than $4.2 billion worth of customer funds after a prolonged legal battle. [A U.S. judge ruled](https://247wallst.com/investing/2023/01/05/celsius-wins-ownership-of-4-2b-worth-of-customers-funds/) that the funds, deposited into interest-bearing accounts with Celsius, are the property of the bankrupt crypto lending firm and can be used as it sees fit. Separately, New York Attorney General Letitia James [filed a lawsuit](https://ag.ny.gov/press-release/2023/attorney-general-james-sues-former-ceo-celsius-cryptocurrency-platform-defrauding) against former Celsius CEO Alex Mashinsky alleging that he defrauded investors of billions of dollars worth of cryptocurrency.
 
 - **The Block reports** that bitcoin futures trading activity ["fell off cliff"](https://www.theblock.co/post/199817/bitcoin-futures-activity-fell-off-cliff-in-december) in December. Monthly volume fell 36% to its lowest level since October 2020 on the Chicago Mercantile Exchange.
 
