Copyedits for 8 Jan 2023

--- a/newsletter/2023-01-08.md
+++ b/newsletter/2023-01-08.md
@@ -17,15 +17,15 @@ To put it in familiar sci-fi terms, these products right now are nowhere close t
 
 I'd say the [nightmare scenario](https://twitter.com/heidilegg/status/1609607413149073414) that journalist and Harvard media researcher Heidi Legg laid out on Twitter recently -- essentially, a dystopia in which the machines tell us what to think about the news -- isn't exactly nigh upon us. But it is definitely a longer-term concern worth discussing.
 
-Tasks I used the bots for this time:
+Tasks I used the bots for in this edition of the newsletter:
 
 - **Drafting.** ChatGPT wrote early drafts of some of the bulleted news items further down in the newsletter. But I had to find the stories myself and feed the full text of the stories to ChatGPT to summarize, as ChatGPT can't access the web itself right now. (It only has a fixed dataset it's been trained on. This is a pretty big limitation indeed.) Then I had to edit and fact check the drafts ChatGPT spit out, much like I might do with a rookie reporter. In fairness, though, ChatGPT wrote much faster than any human, spitting out drafts in less than a minute each for me to review.
 
-- **Headline writing.** Once I drafted the body copy of this update, I fed it into ChatGPT and had it draft several possible headlines. Then my wife and I picked what we thought was the best one. (To be clear, my wife has a Ph.D in creative writing and has always been an uncredited copyeditor on this newsletter, thus an unsung hero to all readers. Thanks, babe!) You can see the ChatGPT-generated headline we chose, unedited, at the top of this post or in the email subject line, if your an email subscriber.
+- **Headline writing.** Once I drafted the body copy of this edition of the newsletter in full, I fed it into ChatGPT and had it draft several possible headlines. Then my wife and I picked what we thought was the best one. (To be clear, my wife has a Ph.D in creative writing and has always been an uncredited copyeditor on this newsletter, thus an unsung hero to all readers. Thanks, babe!) You can see the ChatGPT-generated headline we chose, unedited, at the top of this post or in the email subject line, if you're an email subscriber.
 
-- **Illustration.** This took a *lot* of massaging and iteration with DALL-E, probably as much because of my own limitations as those of the AI. (More on this in a moment.) But I did eventually get it to spit out an image I really liked by requesting an image of "different kinds of robot journalists in a newsroom in the style of Rembrandt." From there, DALL-E produced a nifty square-shaped image that I iterated upon using DALL-E's editing features and some additional queries to the AI.
+- **Illustration.** This took a *lot* of massaging and iteration with DALL-E, probably as much because of my own limitations as those of the AI. (More on this in a moment.) But I did eventually get it to produce an illustration I really liked by requesting an image of "different kinds of robot journalists in a newsroom in the style of Rembrandt." From there, DALL-E produced a nifty square-shaped image that I iterated upon using DALL-E's editing features and some additional queries to the AI.
 
-- **Tech support.** When I was initially struggling with DALL-E, I of course turned to... wait for it... ChatGPT for some advice about its cousin. Frankly, the information it gave me wasn't at all useful and I instead fared much better by doing an old-school web search for articles by human users of DALL-E. It was their accounts, written from old-fashioned trial and error, that really helped me generate the final illustration you see with this edition of the newsletter.  
+- **Tech support.** When I was initially struggling with DALL-E, I of course turned to... wait for it... ChatGPT for some advice about its cousin. Frankly, the information it gave me wasn't at all useful and I instead fared much better by doing an old-school web search for articles by human users of DALL-E. It was their posts, written based upon old-fashioned trial and error, that really helped me generate the final illustration you see with this edition of the newsletter.  
 
 OK. On to the week's other major headlines about decentralization:
 
