--- a/newsletter/2023-01-08.md
+++ b/newsletter/2023-01-08.md
@@ -31,7 +31,7 @@ OK. On to the week's other major headlines about decentralization:
 
 - **FTX founder Sam Bankman-Fried pleaded not guilty** to criminal charges that he cheated investors in his now-bankrupt FTX cryptocurrency exchange and caused billions of dollars in losses. He [faces eight criminal counts](https://www.reuters.com/legal/bankman-fried-set-enter-not-guilty-plea-ftx-fraud-case-2023-01-03/), including wire fraud and money laundering conspiracy. He could face up to 115 years in prison if convicted in a trial set for Oct. 2. U.S. prosecutors have posted a [webpage](https://www.justice.gov/usao-sdny/united-states-v-samuel-bankman-fried-aka-sbf-22-cr-673-lak) asking FTX customers or other creditors to contact them as potential witnesses if they believe they were defrauded.
 
-- **In its civil bankruptcy proceedings,** FTX announced a [new agreement](https://www.prnewswire.com/news-releases/ftx-debtors-and-ftx-dm-bahamas-announce-cooperation-agreement-301715690.html) between its corporate entities in the U.S. and Bahamas to cooperate in resolving creditors' claims in both jurisdictions. Meanwhile, exchange Bankman-Fried is fighting to retain personal control of [$450 million in Robinhood shares](https://www.coindesk.com/business/2023/01/06/sam-bankman-fried-seeks-to-keep-grasp-on-450m-in-robinhood-shares/). And FTX's trading arm, Alameda Research, joined U.S. regulators in [objecting](https://www.coindesk.com/policy/2023/01/05/bankman-frieds-alameda-joins-chorus-objecting-to-binance-voyager-buy/) to Binance.US's proposed purchase of bankrupt crypto lender Voyager Digital for $1 billion.
+- **In its civil bankruptcy proceedings,** FTX announced a [new agreement](https://www.prnewswire.com/news-releases/ftx-debtors-and-ftx-dm-bahamas-announce-cooperation-agreement-301715690.html) between its corporate entities in the U.S. and Bahamas to cooperate in resolving creditors' claims in both jurisdictions. Meanwhile, Bankman-Fried is fighting to retain personal control of [$450 million in Robinhood shares](https://www.coindesk.com/business/2023/01/06/sam-bankman-fried-seeks-to-keep-grasp-on-450m-in-robinhood-shares/). And FTX's trading arm, Alameda Research, joined U.S. regulators in [objecting](https://www.coindesk.com/policy/2023/01/05/bankman-frieds-alameda-joins-chorus-objecting-to-binance-voyager-buy/) to Binance.US's proposed purchase of bankrupt crypto lender Voyager Digital for $1 billion.
 
 - **Decrypt published** a handy [explainer](https://decrypt.co/resources/what-are-proof-reserves-why-do-they-matter) about proof of reserves on crypto exchanges and why they matter.  
 
