Final copy for 15 Jan 2023

--- a/newsletter/2023-01-15.md
+++ b/newsletter/2023-01-15.md
@@ -1,10 +1,10 @@
-# Bitcoin provides a welcome bright spot
+# Bitcoin enjoys a respite from Crypto Winter 
 ## #Web3Weekly: Jan. 8-14, 2023
 
 ![Vermeer's Bitcoin: A still life of physical BTC tokens](https://w3w.news/img/illos/btc-vermeer-final.png)
 *"Vermeer's Bitcoin" by Peter A. McKay × DALL·E*
 
-**Bitcoin gave a ray of hope** to investors even as fallout from Crypto Winter was starkly evident in most of the week's other big developments.
+**Bitcoin gave a ray of hope** to investors even as fallout from Crypto Winter continued to be starkly evident in most of the week's other big developments.
 
 BTC enjoyed a frenzied rally that [accelerated](https://www.msn.com/en-us/money/markets/bitcoin-spikes-above-21000-is-the-crypto-bear-market-over/ar-AA16lxfZ) late in the week. BTC leapt to a two-month high above $21,000 yesterday, up 23% for the week.
 
