--- a/newsletter/2023-01-22.md
+++ b/newsletter/2023-01-22.md
@@ -4,48 +4,44 @@
 ![A collage of images of Guy Fawkes in the style of Warhol](https://w3w.news/img/illos/fawkesnotmonroe.jpg)
 *"Fawkes, Not Monroe" by Peter A. McKay × DALL·E*
 
-**I recently came across** a handy, blessedly short definition of web3 and how it's different:
+**I recently spotted** a blessedly terse definition of web3 and how it differs from previous versions of the web:
 
 - *Web1 = Read*
 - *Web2 = Read + Write*
 - *Web3 = Read + Write + Own*
 
-Credit and thanks for this go to the Web3 Gallery in New York, which includes the little summary above on [their website](https://www.web3gallery.com/).
+Credit goes to the [website](https://www.web3gallery.com/) of the Web3 Gallery in New York for that summary. If you're curious for more detail on the evolution of the web, check out [my own explainer](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814). But for a quick summary, the gallery's definition is spot on.
 
-If you crave more detail on the long-term evolution of the web since its birth in 1989, here's [an explainer](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814) I wrote myself a little while back. But if you just need a basic [TLDR](https://www.urbandictionary.com/define.php?term=TLDR) version, the gallery totally nailed it. ☺️
+The week's notable headlines:
 
-On to the week's notable headlines:
-
-- **The bloodbath among crypto asset managers continues:** Genesis [filed](https://w3w.news/content/genesis-c11.pdf) for Chapter 11 bankruptcy protection, citing [$3.4 billion owed](https://www.barrons.com/articles/genesis-bankruptcy-crypto-bitcoin-51674206942?refsec=markets) to its top 50 creditors. And Silvergate said it [swung to a $1 billion loss](https://www.theblock.co/post/202744/silvergate-bank-loss) in the fourth quarter, compared to a slight profit in the year-ago period.
+- **Bloodletting among crypto asset managers continues:** Genesis [filed](https://w3w.news/content/genesis-c11.pdf) for Chapter 11 bankruptcy protection, citing [$3.4 billion owed](https://www.barrons.com/articles/genesis-bankruptcy-crypto-bitcoin-51674206942?refsec=markets) to its top 50 creditors. And Silvergate said it [swung to a $1 billion loss](https://www.theblock.co/post/202744/silvergate-bank-loss) in the fourth quarter, compared to a slight profit in the year-ago period.
 
 - **U.S. authorities arrested** the founder of Bizlato, alleging the exchange [laundered more than $700 million](https://www.reuters.com/business/finance/us-treasury-dept-says-has-identified-bitzlato-ltd-money-laundering-concern-2023-01-18/) in illicit funds.
 
 - **Bitcoin mining** is expected to get about [10% harder](https://www.theblock.co/post/201203/the-storm-has-passed-but-bitcoin-mining-difficulty-is-about-to-blow-through-the-roof) due to a network update today.
 
-- **Developer activity on web3 projects rose in 2022 despite the market plunge.** According to a [new report](https://www.alchemy.com/blog/web3-developer-report-q4-2022) by the dev platform Alchemy, work on crypto projects rose 493% in 2022's fourth quarter, helped by a 293% increase in deployment of smart contracts on the Ethereum network compared to a year ago. Separately, the venture firm Electric Capital published [research](https://www.developerreport.com/developer-report) showing there were 23,000 monthly active developers working on crypto projects in December, up 5% from a year ago.
+- **Developer activity on web3 projects rose in 2022 despite the market decline.** A report by the platform Alchemy found that work on crypto projects [increased by 493%](https://www.alchemy.com/blog/web3-developer-report-q4-2022) in 2022's fourth quarter, aided by a 293% increase in deployment of smart contracts on the Ethereum network compared to the previous year. Separately, [research](https://www.developerreport.com/developer-report) by venture firm Electric Capital showed that there were 23,000 monthly active developers working on crypto projects in December, up 5% from a year ago.
 
-- **GitHub released** its annual ranking of [most popular programming languages](https://octoverse.github.com/2022/top-programming-languages), based on code committed to repositories on its network. For the the third straight year, the top five were unchanged: JavaScript, Python, Java, Typescript, and C#. Meanwhile, C++ surpassed PHP to take sixth place.
+- **GitHub released** its annual ranking of [most popular programming languages](https://octoverse.github.com/2022/top-programming-languages), based on code committed to repositories on its network. As in every previous report, JavaScript topped the list.
 
-- **Crypto has an urgent influencer marketing problem** akin to the one behind the [ill-fated Fyre Festival](https://www.coindesk.com/consensus-magazine/2023/01/17/crypto-marketing-needs-to-change-lets-make-2023-the-year-for-influencer-accountability/), says Oxygen CEO Nemo Yang.
+- **Oxygen CEO Nemo Yang** believes crypto has an urgent [influencer marketing problem](https://www.coindesk.com/consensus-magazine/2023/01/17/crypto-marketing-needs-to-change-lets-make-2023-the-year-for-influencer-accountability/) akin to the one that caused the Fyre Festival disaster.
 
 - **The Polygon network** completed a hard fork designed to [stabilize transaction fees](https://www.coindesk.com/tech/2023/01/17/polygon-completes-hard-fork-to-reduce-gas-fee-spikes-disruptive-reorgs/).
 
-- **In a New York Times op-ed,** financier and former Obama adviser Steven Rattner described an emerging race among nations to [secure access to computer chips](https://www.nytimes.com/2023/01/16/opinion/america-biden-semiconductor-tsmc.html) as a vital economic resource, akin to previous wrangling to ensure access to oil supplies.
+- **In a New York Times op-ed,** financier and former Obama advisor Steven Rattner discussed the growing competition among nations to [secure access to computer chips](https://www.nytimes.com/2023/01/16/opinion/america-biden-semiconductor-tsmc.html) as a vital economic resource, similar to past struggles to secure access to oil.
 
 - **CoinDesk reports** that 196 U.S. lawmakers, or more than one-third of the current Congress, [received political donations](https://www.coindesk.com/policy/2023/01/17/congress-ftx-problem-1-in-3-members-got-cash-from-crypto-exchanges-bosses/) from FTX founder Sam Bankman-Fried prior to his company's meltdown in November. 😲
 
-- **Crypto was again a hot topic** at the World Economic Forum's annual conference in Davos, Switzerland. A consortium of organizations, including the Solana Foundation and Ripple, [announced a new partnership](https://www.coindesk.com/business/2023/01/17/solana-foundation-ripple-gbbc-and-others-form-partnership-to-promote-crypto-solutions-for-climate-change/) to promote crypto-based climate solutions. Meanwhile, CNBC reports that many of the Davos conference's powerful participants were keen to [shift the public narrative](https://www.msn.com/en-us/money/news/davos-crypto-crowd-distance-themselves-from-ftx-and-sam-bankman-fried-its-fraud/ar-AA16vElp) about the crypto industry away from FTX's meltdown. In an interview with [Bloomberg TV](https://www.bloomberg.com/news/videos/2023-01-19/circle-ceo-on-future-of-crypto-regulation-video), Circle CEO Jeremy Allaire said of FTX: "The technology didn't commit fraud. The technology didn't commit poor risk management or leverage decisions. Firms and people did that." *(Full disclosure: I've previously freelanced for WEF.)*
+- **Crypto was a popular topic at the World Economic Forum's annual conference in Davos, Switzerland.** A consortium of organizations, including the Solana Foundation and Ripple, [announced a new climate partnership](https://www.coindesk.com/business/2023/01/17/solana-foundation-ripple-gbbc-and-others-form-partnership-to-promote-crypto-solutions-for-climate-change/). In general, attendees sought to [shift the public narrative](https://www.msn.com/en-us/money/news/davos-crypto-crowd-distance-themselves-from-ftx-and-sam-bankman-fried-its-fraud/ar-AA16vElp) about crypto away from FTX's collapse. In an interview with [Bloomberg TV](https://www.bloomberg.com/news/videos/2023-01-19/circle-ceo-on-future-of-crypto-regulation-video), Circle CEO Jeremy Allaire said of FTX: "The technology didn't commit fraud. The technology didn't commit poor risk management or leverage decisions. Firms and people did that." *(Full disclosure: I've previously freelanced for WEF.)*
 
 - **BREAKING:** The New York Times just realized there are still people [building web3 products and communities](https://www.nytimes.com/2023/01/17/business/crypto-market-meltdown-nft-blockchain.html) despite big declines in token prices in 2022. Who knew!
 
 - **"Every flight between Boston and New York is a policy failure."** -- [@mcplanner](https://twitter.com/mcplanner/status/1613173892021121024)
 
-- **An editorial cartoon** published in the New York World in 1923 [depicted a "cartoon dynamo" device](https://arstechnica.com/information-technology/2023/01/a-cartoonist-predicted-2023s-ai-drawing-machines-in-1923/) that would generate ideas and drawings for an artist, saving him a lot of labor. This sounds familiar...
+- **An editorial cartoon** from 1923 [depicted a device](https://arstechnica.com/information-technology/2023/01/a-cartoonist-predicted-2023s-ai-drawing-machines-in-1923/) that generated ideas and drawings for an artist, saving him a lot of work. This sounds familiar...
 
-<!-- Boilerplate needs reworking in the New Year... -->
+_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
-_**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
-
-_**As ever, a brief disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please [DYOR](https://www.google.com/search?q=DYOR&sxsrf=ALiCzsbQdCxZ0zVRVuYN5L2c-89lO7I5cw%3A1663013827193&source=hp&ei=w5MfY5f5BrylptQPrba9uAo&iflsig=AJiK0e8AAAAAYx-h08-1Cfk2JUZBncAoNuCZfyyt_eDY&ved=0ahUKEwjX5q-jiZD6AhW8kokEHS1bD6cQ4dUDCAk&uact=5&oq=DYOR&gs_lcp=Cgdnd3Mtd2l6EAMyCAgAEIAEELEDMgsIABCABBCxAxCLAzIICAAQgAQQiwMyCAgAEIAEEIsDMggIABCABBCLAzIICAAQgAQQiwMyCggAEIAEEAoQiwMyBQgAEIAEMgUIABCABDIFCAAQgAQ6BAgjECc6CAguELEDEIMBOhEILhCABBCxAxCDARDHARDRAzoLCAAQgAQQsQMQgwE6CAgAELEDEIMBOgsILhCABBCxAxCDAToECAAQA1AAWLEEYJkGaABwAHgBgAHaAYgB2wOSAQUyLjEuMZgBAKABAbgBAQ&sclient=gws-wiz) and consult appropriate financial pros to make the most suitable choices for your individual needs.**_
+_**Note: This content is for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
 
 _**Best wishes for a healthy and productive week ahead.**_  
