Adding one more item re: Google

--- a/newsletter/2023-01-22.md
+++ b/newsletter/2023-01-22.md
@@ -24,17 +24,17 @@ The week's notable headlines:
 
 - **GitHub released** its annual ranking of [most popular programming languages](https://octoverse.github.com/2022/top-programming-languages), based on code committed to repositories on its network. As in every previous report, JavaScript topped the list.
 
-- **Oxygen CEO Nemo Yang** believes crypto has an urgent [influencer marketing problem](https://www.coindesk.com/consensus-magazine/2023/01/17/crypto-marketing-needs-to-change-lets-make-2023-the-year-for-influencer-accountability/) akin to the one that caused the Fyre Festival disaster.
-
 - **The Polygon network** completed a hard fork designed to [stabilize transaction fees](https://www.coindesk.com/tech/2023/01/17/polygon-completes-hard-fork-to-reduce-gas-fee-spikes-disruptive-reorgs/).
 
-- **In a New York Times op-ed,** financier and former Obama advisor Steven Rattner discussed the growing competition among nations to [secure access to computer chips](https://www.nytimes.com/2023/01/16/opinion/america-biden-semiconductor-tsmc.html) as a vital economic resource, similar to past struggles to secure access to oil.
-
-- **CoinDesk reports** that 196 U.S. lawmakers, or more than one-third of the current Congress, [received political donations](https://www.coindesk.com/policy/2023/01/17/congress-ftx-problem-1-in-3-members-got-cash-from-crypto-exchanges-bosses/) from FTX founder Sam Bankman-Fried prior to his company's meltdown in November. 😲
+- **Oxygen CEO Nemo Yang** believes crypto has an urgent [influencer marketing problem](https://www.coindesk.com/consensus-magazine/2023/01/17/crypto-marketing-needs-to-change-lets-make-2023-the-year-for-influencer-accountability/) akin to the one that caused the Fyre Festival disaster.
 
 - **Crypto was a popular topic at the World Economic Forum's annual conference in Davos, Switzerland.** A consortium of organizations, including the Solana Foundation and Ripple, [announced a new climate partnership](https://www.coindesk.com/business/2023/01/17/solana-foundation-ripple-gbbc-and-others-form-partnership-to-promote-crypto-solutions-for-climate-change/). In general, attendees sought to [shift the public narrative](https://www.msn.com/en-us/money/news/davos-crypto-crowd-distance-themselves-from-ftx-and-sam-bankman-fried-its-fraud/ar-AA16vElp) about crypto away from FTX's collapse. In an interview with [Bloomberg TV](https://www.bloomberg.com/news/videos/2023-01-19/circle-ceo-on-future-of-crypto-regulation-video), Circle CEO Jeremy Allaire said of FTX: "The technology didn't commit fraud. The technology didn't commit poor risk management or leverage decisions. Firms and people did that." *(Full disclosure: I've previously freelanced for WEF.)*
 
-- **BREAKING:** The New York Times just realized there are still people [building web3 products and communities](https://www.nytimes.com/2023/01/17/business/crypto-market-meltdown-nft-blockchain.html) despite big declines in token prices in 2022. Who knew!
+- **CoinDesk reports** that 196 U.S. lawmakers, or more than one-third of the current Congress, [received political donations](https://www.coindesk.com/policy/2023/01/17/congress-ftx-problem-1-in-3-members-got-cash-from-crypto-exchanges-bosses/) from FTX founder Sam Bankman-Fried prior to the company's meltdown in November. 😲
+
+- **Google is cutting staff,** and management is deeply worried about potential competition in search from OpenAI. Founders Larry Page and Sergey Brin, who stepped away from daily roles in Google in 2019, have [recently returned](https://www.nytimes.com/2023/01/20/technology/google-chatgpt-artificial-intelligence.html) to help strategize, according to the New York Times.
+
+- **In a New York Times op-ed,** financier and former Obama advisor Steven Rattner discussed the growing competition among nations to [secure access to computer chips](https://www.nytimes.com/2023/01/16/opinion/america-biden-semiconductor-tsmc.html) as a vital economic resource, similar to past struggles to secure access to oil.
 
 - **"Every flight between Boston and New York is a policy failure."** -- [@mcplanner](https://twitter.com/mcplanner/status/1613173892021121024)
 
@@ -45,3 +45,5 @@ _**That's it for now. Thanks for reading the newsletter today! If you want to re
 _**Note: This content is for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
 
 _**Best wishes for a healthy and productive week ahead.**_  
+
+*-- Peter A. McKay*
